# AELang

./: -o  .gitignore  BOOLEAN_IMPLEMENTATION.md  BUILD_SYSTEM_UPDATE_SUMMARY.md  CMakeLists.txt  COMPREHENSIVE_TEST_REPORT.md  FEATURE_REFERENCE.md  LLVM_INTEGRATION_README.md  Makefile  Makefile.llvm  Makefile.test  PROJECT_CLEANUP_SUMMARY.md  README.md  TESTING_SUITE_README.md  TEST_FRAMEWORK_README.md  TEST_RESULTS.md  TOMORROW_WORK_PLAN.md  advanced_features_test  advanced_features_test.ae  advanced_features_test.asm  aelang  arithmetic_test.ae  arithmetic_test.asm  basic_scope_test  basic_scope_test.ae  bitwise_demo  bitwise_verification.ae  build.sh  build_clean.sh  build_llvm.sh  build_unified.sh  calci_32  calci_32.asm  calci_32_final  calci_32_final.asm  calci_32_fixed.asm  calci_32_typed  calci_32_typed.asm  calculator  calculator_test  (+198 more)
ae_programs/: add.ae  auto_comprehensive_64bit_test.ae  calci.ae  calci64  calci_float.ae  comprehensive_32bit_test.ae  comprehensive_data_type_test.ae  comprehensive_test_all_types.ae  f8_f16_precision_test.ae  float_64_test.ae  interactive_calculator.ae  minimal_64_test.ae  minimal_float_test.ae  optimized_32bit_test.ae  read_test.ae  simple_f8_f16_test.ae  test_32bit_only.ae  test_64bit_error.ae  test_64bit_rejection.ae  test_f32_basic.ae  test_newlines.ae  test_printf_f32.ae  ultimate_comprehensive_test.ae  unified_io_demo.ae  universal_read_test.ae
c_libs/: aelang_universal.c  print.c  print_clean.c  print_float.c  print_formatted.c  print_int.c  print_num.c  read_enhanced.c  read_float.c  read_int.c  read_num.c  read_num_safe.c
compiler/: Makefile
docs/: AELANG_COMPILER_COMPLETE_DOCUMENTATION.md  AELANG_COMPLETE_SYNTAX_DOCUMENTATION.md  AELANG_COMPLETE_SYNTAX_REFERENCE.md  AELANG_COMPREHENSIVE_TEST_REPORT.md  AELANG_SYNTAX_REFERENCE.md  AELANG_TECHNICAL_IMPLEMENTATION_REPORT.md  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  ENHANCED_TYPE_SYSTEM_COMPLETE.md  INDEX.md  LANGUAGE_REFERENCE.md  README.md  UNIFIED_IO_COMPLETE_SUCCESS.md  UNIFIED_IO_FINAL_SUCCESS_REPORT.md  aelang_language_support_report.md  aelang_universal_library_complete_reference.md  aelang_universal_library_documentation.md  aelang_universal_library_technical_reference.md  calculator_summary.md  comparison_operators_complete_report.md  comparison_operators_quick_reference.md  enhanced_calculator_final_report.md  final_development_summary.md  floating_point_fix.md  interactive_calculator_final_summary.md  library_consolidation_report.md  modulo_and_comparison_operators_final_success_report.md  modulo_implementation_summary.md  modulo_operator_and_interactive_programming_report.md  num_input_completion_summary.md  read_num_implementation.md
examples/: add.ae  advanced_interactive_calculator.ae  advanced_num_showcase.ae  arch32_extreme_test.ae  arch64_extreme_test.ae  boolean_test.ae  calculator.ae  calculator_test_suite.ae  comparison_operators.ae  comparison_operators_test_suite.ae  complete_calculator.ae  complete_feature_test.ae  complex_expression_fixed_test.ae  complex_expression_test.ae  comprehensive_edge_case_test.ae  comprehensive_feature_test.ae  comprehensive_test.ae  comprehensive_unified_read_test.ae  corrected_comprehensive_test.ae  debug_comparison.ae  debug_if_parsing.ae  (+74 more)
(+115 files in other folders)
